--- a/package.json
+++ b/package.json
@@ -17,11 +17,22 @@
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
+    "@angular/localize": "~10.0.14",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@fortawesome/fontawesome-free": "~5.6.3",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.3",
+    "@types/chart.js": "^2.7.40",
     "@types/jest": "^26.0.20",
+    "angular-bootstrap-md": "^10.1.1",
+    "animate.css": "~3.7.2",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.7.2",
+    "hammerjs": "~2.0.8",
+    "mdb-ui-kit": "^3.1.0",
+    "mdbootstrap": "^4.19.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
