--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@fortawesome/fontawesome-free": "~5.6.3",
     "@ng-bootstrap/ng-bootstrap": "^8.0.3",
     "@types/chart.js": "^2.7.40",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^26.0.20",
     "angular-bootstrap-md": "^10.1.1",
+    "angular-file-saver": "^1.1.3",
     "animate.css": "~3.7.2",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.7.2",
