--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.7.2",
     "hammerjs": "~2.0.8",
+    "jquery": "^3.5.1",
     "mdb-ui-kit": "^3.1.0",
     "mdbootstrap": "^4.19.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
