--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.5.1",
     "mdb-ui-kit": "^3.1.0",
     "mdbootstrap": "^4.19.2",
+    "ngx-owl-carousel-o": "^4.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
