--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@fortawesome/fontawesome-free": "~5.6.3",
+    "@kolkov/angular-editor": "^1.1.4",
     "@ng-bootstrap/ng-bootstrap": "^8.0.3",
     "@types/chart.js": "^2.7.40",
     "@types/file-saver": "^2.0.1",
